--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ a, a:hover, a:active{ outline:0px !important}
 body {
 	background:#fff;
 	font-family: 'Montserrat', sans-serif;
-
+	overflow: hidden;
 	font-weight:normal;
 	color:#888888;
 	margin:0;
@@ -395,6 +395,8 @@ color: #fff;
 	font-weight: bold;
 }
 
+
+
 .projects-box p{
 	font-size:15px;
 	margin-top: 20px;
@@ -508,6 +510,7 @@ color: #fff;
 	margin: 20px;
 	background-color:white;
 	border-color:#696969;
+	transition: 0.5s;
 }
 
 .contact button:hover{
@@ -549,3 +552,194 @@ form{
 	margin-block-end: 0;
 }
 
+/* EXPERIMENTS */
+.form1 input, .form1 textarea{
+	display: block;
+	width: 500px;
+	padding: 10px;
+	background-color: white;
+	margin: 20px 0;
+	outline: none;
+	font-size: 1.2rem;
+	color: black;
+	position: relative;
+	left: 50%;
+	right: 50%;
+	resize: none;
+	transform: translateX(-50%);
+}
+.form1 div{
+	position: relative;
+	left: 50%;
+	right: 50%;
+	resize: none;
+	transform: translateX(-50%);
+}
+.form1 input:last-child{
+	text-transform: capitalize;
+	color: #000;
+	background-color:white;
+	border-color:#696969;
+	cursor: pointer;
+	border: none;
+	width: 250px;
+	transition: 1s;
+}
+.form1 input:last-child:hover{
+	text-transform: capitalize;
+	color: #fff;
+	background-color:#0069d9;
+	border-color:#696969;
+	cursor: pointer;
+	border: none;
+	width: 300px;
+	transition: 1s;
+}
+
+.toast{
+	-webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+#toast-container {
+	display: block;
+	position: fixed;
+	color: white;
+	z-index: 10000;
+  }
+  
+  @media only screen and (max-width: 600px) {
+	#toast-container {
+	  min-width: 100%;
+	  bottom: 0%;
+	}
+  }
+  
+  @media only screen and (min-width: 601px) and (max-width: 992px) {
+	#toast-container {
+	  left: 5%;
+	  bottom: 7%;
+	  max-width: 90%;
+	}
+  }
+  
+  @media only screen and (min-width: 993px) {
+	#toast-container {
+	  top: 10%;
+	  right: 7%;
+	  max-width: 86%;
+	}
+  }
+  
+  .toast {
+	border-radius: 2px;
+	top: 35px;
+	width: auto;
+	margin-top: 10px;
+	position: relative;
+	max-width: 100%;
+	height: auto;
+	min-height: 48px;
+	line-height: 1.5em;
+	background-color: #323232 !important;
+	padding: 10px 25px;
+	font-size: 1.1rem;
+	font-weight: 300;
+	color: #fff;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+		-ms-flex-align: center;
+			align-items: center;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+		-ms-flex-pack: justify;
+			justify-content: space-between;
+	cursor: default;
+  }
+  
+  .toast .toast-action {
+	font-weight: 500;
+	margin-right: -25px;
+	background-color: black;
+	color: white;
+	margin-left: 3rem;
+  }
+  
+  .toast.rounded {
+	border-radius: 24px;
+  }
+  
+  @media only screen and (max-width: 600px) {
+	.toast {
+	  width: 100%;
+	  border-radius: 0;
+	  background-color: black;
+	color: white;
+	}
+  }
+
+  .tap-target-wrapper.open .tap-target-wave::after {
+	visibility: visible;
+	-webkit-animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
+			animation: pulse-animation 1s cubic-bezier(0.24, 0, 0.38, 1) infinite;
+	-webkit-transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
+	transition: opacity .3s, visibility 0s 1s, -webkit-transform .3s;
+	transition: opacity .3s, transform .3s, visibility 0s 1s;
+	transition: opacity .3s, transform .3s, visibility 0s 1s, -webkit-transform .3s;
+  }
+
+
+  #progress {
+    height: 1px;
+    background: rgb(126, 126, 126);
+    position: sticky;
+    transition: width 0.5s ease;
+    top: 45%;
+    opacity: 1;
+    z-index: 2;
+}
+#gallery {
+    opacity: 0;
+    width: 100%;
+    grid-template-columns: repeat(2, 25%);
+    grid-gap: 5em;
+    justify-content: center;
+    align-content: center;
+    transform: scale(.8);
+}
+.fadeIn {
+    transform: scale(1) !important;
+    opacity: 1 !important;
+    transition: all 1s 1.5s;
+}
+#hidethis{
+	z-index: -1;
+	opacity: 0;
+	transition: opacity 3s !important;
+}
+.expand {
+    opacity: 0 !important;
+    transition: opacity 2s !important;
+}
+
+.loading h1,.loading img{
+	animation: rotation 1.5s infinite ease-in-out;
+	height: 320px;
+	width: 400px;
+	display: flexbox;
+	align-items:center;
+	font-family: 'Montserrat', sans-serif;
+}
+
+@keyframes rotation {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(359deg);
+	}
+  }
