--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 /* CSS Document */
 
+*{
+	font-family: 'Montserrat', sans-serif;
+}
+
 /* Float Elements 
 ---------------------------------*/
 .fl-lt {float:left;}
@@ -180,7 +184,7 @@ color: #fff;
 }
 
 .header-content{
-    margin-top: 14px;
+    margin-top: 8px;
     border: 3px solid transparent;
     border-image: linear-gradient(to right, white, grey);
     border-image-slice: 1;
@@ -382,11 +386,13 @@ color: #fff;
 }
 
 .projects-box{
-	background: rgb(247, 247, 247);
 	padding: 10px;
 	margin-top: 20px;
 	border-top-right-radius: 50;
 	border-bottom-left-radius: 50;
+	border-radius: 10px;
+    background: #000;
+	color: #fff;
 }
 
 .projects-box span{
@@ -395,23 +401,17 @@ color: #fff;
 	font-weight: bold;
 }
 
-
-
 .projects-box p{
 	font-size:15px;
 	margin-top: 20px;
-	color: #777;
 }
 
 .projects-box:hover{
 	background: #000;
 	color: #fff;
 	margin-top: 20px;
-	transition-duration: 1.5s;
-	border-top-right-radius: 0;
-	border-bottom-left-radius: 0;
-	border-top-left-radius: 50px;
-	border-bottom-right-radius: 50px;
+	box-shadow: 0px 40px 50px rbga(0, 0, 0, 0.4);
+    transition: all 0.3s;
 }
 
 .projects-box p a{
@@ -420,14 +420,6 @@ color: #fff;
 	color: #888888;
 }
 
-.projects-box p:hover{
-	color: #fff;
-}
-
-.projects-box p a:hover{
-	font-weight: bold;
-	color: #888888;
-}
 /* ACHIEVEMENTS */
 .achieve-mf{
 	background-color: #f9f9f9;
@@ -587,13 +579,11 @@ form{
 }
 .form1 input:last-child:hover{
 	text-transform: capitalize;
-	color: #fff;
-	background-color:#0069d9;
+	border-radius: 20;
 	border-color:#696969;
 	cursor: pointer;
-	border: none;
 	width: 300px;
-	transition: 1s;
+	transition: 0.6s;
 }
 
 .toast{
