--- a/css/style.css
+++ b/css/style.css
@@ -246,7 +246,8 @@ color: #fff;
 
 .t-form:hover{
 	color: rgb(58, 58, 245);
-	transition: 1s;
+	text-decoration: underline;
+	transition: 0.6s;
 }
 
 /* ABOUT CONTAINER */
@@ -259,8 +260,7 @@ color: #fff;
 .image-container{
 	border-radius: 30%;
 	color: #000;
-	height: 250px;
-	margin-top: 100px;
+	height: auto;
 }
 
 .navbar-toggler{
@@ -390,7 +390,7 @@ color: #fff;
 	margin-top: 20px;
 	border-top-right-radius: 50;
 	border-bottom-left-radius: 50;
-	border-radius: 10px;
+	/* border-radius: 10px; */
     background: #000;
 	color: #fff;
 }
@@ -425,7 +425,9 @@ color: #fff;
 	background-color: #f9f9f9;
 }
 .card-achieve {
-	box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 20px 8px -10px rgba(0, 0, 0, 0.1);
+	height: 250;
+	border-radius: 20;
 }
 
 @media (min-width: 767px) {
